--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
   <h1>Hunter CS Certification Portfolio</h1>
   <h2>Programming in Java</h2>
+  <ul>
+    <li><a href="https://github.com/hunter-teacher-cert/work_csci70900-lfridman2016/blob/master/4/Cgol.java">Conway's Game of Life</a></li>
+    <li><a href="https://github.com/hunter-teacher-cert/work_csci70900-lfridman2016/blob/master/6/SuperArray.java">Super Array</a></li>
+  </ul>
   <h2>Data Structrues</h2>
   <h2>Methods I</h2>
 
