--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <li><a href="https://github.com/hunter-teacher-cert/work_csci70900-lfridman2016/blob/master/6/SuperArray.java">Super Array</a></li>
   </ul>
   <h2>Data Structrues</h2>
+  <ul>
+    <li><a href="https://github.com/hunter-teacher-cert/work_csci70900-lfridman2016/blob/master/ds/mode/Mode.java">Mode</a></li>
+  </ul>
+      
   <h2>Methods I</h2>
-
+  
 </body>
 </html>
